# SK2-Projekt

./: .gitignore  .~lock.countries.csv#  CMakeLists.txt  README.md  cities.csv  countries.csv  makefile  names.csv
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: another.cpp
src/client/: game.ui  main.py  nick.ui  room.ui  setup_venv.sh  sk2-projekt.pyproject
src/server/: handler.cpp  handler.h  room.cpp  room.h  server.cpp  server.h  timer.cpp  timer.h
